<resources>
    <string name="app_name">FreeBox</string>
    <string name="debug">WARNING: DEBUG Mode is Enabled</string>
    <string name="info_slider">Information</string>
    <string name="settings_slider">Settings</string>
    <string name="menu_keyboard">Keyboard</string>
    <string name="menu_joystick">Joystick</string>
    <string name="menu_inputmethod">Input Method</string>
    <string name="menu_specialkeys">Special Keys</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="input_touchscreen">Touchscreen</string>
    <string name="input_joystick">Joystick</string>
    <string name="input_mouse">Mouse/Stylus</string>
    <string name="input_scroll">Scroll Screen</string>
    <string name="info_dbquickmenu">DosBox QuickMenu</string>
    <string name="info_cycles">Cycles:</string>
    <string name="info_frameskip">FrameSkip:</string>
    <string name="info_inputmode">Input Mode:</string>
    <string name="info_tracking">Tracking:</string>
    <string name="info_keyboard">Virtual Keyboard</string>
    <string name="info_joystick">Virtual Joystick</string>
    <string name="info_scale">Screen Scaling</string>
    <string name="info_specialkeys">Send Special Key</string>
    <string name="info_settings">Settings Menu</string>
    <string name="info_governor">CPU Governor:</string>
    <string name="info_cputype">CPU Family:</string>
    <string name="info_neon">CPU NEON:</string>
    <string name="info_dosmem">DOS Memory:</string>
    <string name="info_manager">DB Manager:</string>
    <string name="info_version">Version:</string>
    <string name="info_buttons">Virtual Buttons</string>
    <string name="info_rendermode">Render Mode:</string>
    <string name="info_dbinfo">System Information</string>
    <string name="info_mapmouse">Mouse Map:</string>
    <string name="info_mapjoy">Joy Map:</string>
    <string name="fastforward">Fast Forward</string>
    <string name="auto">Auto</string>
    <string name="notinstalled">Not Installed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restart">Restart for changes to take effect</string>
    <string name="manual">Manually edit /sdcard/dosbox.conf to set configuration</string>
    <string name="error">An unknown error occurred</string>
    <string name="cont">Continue</string>
    <string name="cycles">DosBox Cycles: </string>
    <string name="select_dos_key">Select DOS Key Mapping</string>
    <string name="select_controller_key">Press Hardware Key or select Virtual Button:</string>
    <string name="select_analog_stick">Move the analog stick in all directions</string>
	<string name="undefined">undefined</string>
	<string name="clear">Clear</string>
	<string name="keyboard">Keyboard</string>
	<string name="noeditor">No system text editor installed.</string>
	<string name="confirmreset">Confirm reset to default?</string>
	<string name="confirmclear">Confirm clear all button maps?</string>
	<string name="duplicatemap">Error: Duplicate Button Map. Try again.</string>
	<string name="nomoremaps">No more hardware keymaps available.</string>
	<string name="gplsource">Copy source code to SD Card?</string>
	<string name="dontkeepactivities">ERROR: Don\'t keep activies Dev Option enabled! (See FAQ)</string>
	<string name="mt32missing">MT32 ROM missing, please see FAQ for MIDI emulation</string>
	<string name="glidenogpu">GPU Rendering not compatible with experimental Glide emulation.</string>
	<string name="pref_advconfig">Advanced DosBox Config</string>
	<string name="pref_dbsettings">DosBox Settings</string>
	<string name="pref_memtitle">Memory Size</string>
	<string name="pref_memsum">Set the amount of memory available to DOS</string>
	<string name="pref_frameskip">Set the FrameSkip amount</string>
	<string name="pref_cycles">DosBox Cycles (setting too high may cause lag)</string>
	<string name="pref_machine">DosBox Machine Emulation Setting</string>
	<string name="pref_cpucore">DosBox CPU Core Setting</string>
	<string name="pref_cputype">DosBox CPU Type Setting</string>
	<string name="pref_sbtype">Choose Soundblaster Emulation</string>
	<string name="pref_sbrate">Choose the Audio Sample Rate/Quality</string>
	<string name="pref_mixerblocksize">Audio Mixer Blocksize (larger values may reduce skipping)</string>
	<string name="pref_mixerprebuffer">Audio Mixer Pre-Buffer (larger values may reduce skipping)</string>
	<string name="pref_kblayout">Choose the Locale for the Keyboard Layout</string>
	<string name="pref_manualconf_file">Choose name/location of the dosbox config file</string>
	<string name="pref_editconf_file">Edit with system text editor (if installed)</string>
	<string name="pref_mousejoymode">Use Joystick to control Mouse Pointer</string>
    <string-array name="dosmemsize">
  		<item>1 MB</item>
  		<item>2 MB</item>
  		<item>4 MB</item>
  		<item>8 MB</item>
  		<item>12 MB</item>
  		<item>16 MB</item>
  		<item>24 MB</item>
  		<item>32 MB</item>
  		<item>64 MB</item>
  		<item>128 MB</item>
  		<item>256 MB</item>
  	</string-array>
  	<string-array name="dosmemsize_values">
  		<item>1</item>
  		<item>2</item>
  		<item>4</item>
  		<item>8</item>
  		<item>12</item>
  		<item>16</item>
  		<item>24</item>
  		<item>32</item>
  		<item>64</item>
  		<item>128</item>
  		<item>256</item>
  	</string-array>
    <string-array name="dosframeskip">
  		<item>0</item>
  		<item>1</item>
  		<item>2 (default)</item>
  		<item>3</item>
  		<item>4</item>
  		<item>5</item>
  		<item>6</item>
  		<item>7</item>
  		<item>8</item>
  		<item>9</item>
  		<item>10</item>
  	</string-array>
  	<string-array name="dosframeskip_values">
  		<item>0</item>
  		<item>1</item>
  		<item>2</item>
  		<item>3</item>
  		<item>4</item>
  		<item>5</item>
  		<item>6</item>
  		<item>7</item>
  		<item>8</item>
  		<item>9</item>
  		<item>10</item>
  	</string-array>
    <string-array name="doscycles">
  		<item>auto (default)</item>
  		<item>1000</item>
  		<item>2000</item>
  		<item>3000</item>
  		<item>4000</item>
  		<item>5000</item>
  		<item>6000</item>
  		<item>7000</item>
  		<item>8000</item>
  		<item>9000</item>
  		<item>10000</item>
  		<item>11000</item>
  		<item>12000</item>
  		<item>13000</item>
  		<item>14000</item>
  		<item>15000</item>  		
  		<item>16000</item>
  		<item>17000</item>
  		<item>18000</item>
  		<item>19000</item>
  		<item>20000</item>
  		<item>21000</item>
  		<item>22000</item>
  		<item>23000</item>
  		<item>24000</item>
  		<item>25000</item>
  		<item>26000</item>
  		<item>27000</item>
  		<item>28000</item>
  		<item>29000</item>
  		<item>30000</item>
  		<item>31000</item>
  		<item>32000</item>
  		<item>33000</item>
  		<item>34000</item>
  		<item>35000</item>		
  		<item>36000</item>		
  		<item>37000</item>		
  		<item>38000</item>		
   		<item>39000</item>		 		
   		<item>40000</item>		 		
  		<item>41000</item>		
  		<item>42000</item>		
  		<item>43000</item>		
  		<item>44000</item>		
   		<item>45000</item>		 		
   	</string-array>
  	<string-array name="doscycles_values">
  		<item>-1</item>
  		<item>1000</item>
  		<item>2000</item>
  		<item>3000</item>
  		<item>4000</item>
  		<item>5000</item>
  		<item>6000</item>
  		<item>7000</item>
  		<item>8000</item>
  		<item>9000</item>
  		<item>10000</item>
  		<item>11000</item>
  		<item>12000</item>
  		<item>13000</item>
  		<item>14000</item>
  		<item>15000</item>
  		<item>16000</item>
  		<item>17000</item>
  		<item>18000</item>
  		<item>19000</item>
  		<item>20000</item>		 
  		<item>21000</item>
  		<item>22000</item>
  		<item>23000</item>
  		<item>24000</item>
  		<item>25000</item>
  		<item>26000</item>
  		<item>27000</item>		 
  		<item>28000</item>		 
  		<item>29000</item>
  		<item>30000</item>
  		<item>31000</item>
  		<item>32000</item>
  		<item>33000</item>
  		<item>34000</item>
  		<item>35000</item>		
  		<item>36000</item>		
  		<item>37000</item>		
  		<item>38000</item>		
   		<item>39000</item>		 		
   		<item>40000</item>
  		<item>41000</item>		
  		<item>42000</item>		
  		<item>43000</item>		
  		<item>44000</item>		
   		<item>45000</item>		 		
   	</string-array>
    <string-array name="dosmachine">
  		<item>svga_s3 (recommended)</item>
  		<item>vgaonly</item>
  		<item>ega</item>
  		<item>pcjr</item>
  		<item>tandy</item>
  		<item>cga</item>
  		<item>hercules</item>
  	</string-array>
  	<string-array name="dosmachine_values">
  		<item>svga_s3</item>
 		<item>vgaonly</item>
  		<item>ega</item>
  		<item>pcjr</item>
  		<item>tandy</item>
  		<item>cga</item>
  		<item>hercules</item>
  	</string-array>
    <string-array name="doscpu">
  		<item>dynamic (fastest)</item>
  		<item>auto</item>
  		<item>normal</item>
  		<item>simple</item>
  	</string-array>
  	<string-array name="doscpu_values">
  		<item>dynamic</item>
 		<item>auto</item>
  		<item>normal</item>
  		<item>simple</item>
  	</string-array>
    <string-array name="doscputype">
  		<item>auto (fastest)</item>
  		<item>386</item>
  		<item>486</item>
  		<item>pentium</item>
  		<item>pentium_mmx</item>
  	</string-array>
  	<string-array name="doscputype_values">
  		<item>auto</item>
  		<item>386</item>
  		<item>486</item>
  		<item>pentium</item>
  		<item>pentium_mmx</item>
  	</string-array>
  	<string-array name="dossbtype">
  		<item>Disable SB Emulation</item>
        <item>SoundBlaster 2.0 (faster)</item>
  		<item>SoundBlaster Pro 1.0</item>
  		<item>SoundBlaster Pro 2.0</item>
  		<item>SoundBlaster 16 (default)</item>
  	</string-array>
  	<string-array name="dossbtype_values">
  	    <item>none</item>
  		<item>sb2</item>
  		<item>sbpro1</item>
  		<item>sbpro2</item>
 		<item>sb16</item>
  	</string-array>
    <string-array name="dossbrate">
  		<item>8000 Hz (faster)</item>
  		<item>11025 Hz</item>
  		<item>16000 Hz</item>
  		<item>22050 Hz (default)</item>
  		<item>32000 Hz</item>
  		<item>44100 Hz (slower)</item>
  	</string-array>
  	<string-array name="dossbrate_values">
  		<item>8000</item>
 		<item>11025</item>
 		<item>16000</item>
 		<item>22050</item>
 		<item>32000</item>
 		<item>44100</item>
  	</string-array>
    <string-array name="dosmixerblocksize">
  		<item>512 (faster)</item>
  		<item>1024 (default)</item>
  		<item>2048</item>
  		<item>3072</item>
  		<item>4096</item>
  	</string-array>
  	<string-array name="dosmixerblocksize_values">
  		<item>512</item>
 		<item>1024</item>
 		<item>2048</item>
 		<item>3072</item>
 		<item>4096</item>
  	</string-array>
	<string-array name="doskblayout">
  		<item>Auto (default)</item>
  		<item>Belgium</item>
  		<item>Brazil</item>
  		<item>Canadian-French</item>
  		<item>Czech</item>
  		<item>Slovak</item>
  		<item>Denmark</item>
  		<item>Finland</item>
  		<item>France</item>
  		<item>Germany</item>
  		<item>Hungary</item>
  		<item>Italy</item>
  		<item>Latin America</item>
  		<item>Netherlands</item>
  		<item>Norway</item>
  		<item>Poland</item>
  		<item>Portugal</item>
  		<item>Spain</item>
  		<item>Sweden</item>
  		<item>Swiss(French)</item>
  		<item>Swiss(German)</item>
  		<item>UK</item>
  		<item>USA</item>
  		<item>Yugoslavia</item>	    
  	</string-array>
  	<string-array name="doskblayout_values">
  		<item>auto</item>
  		<item>be</item>
  		<item>br</item>
  		<item>cf</item>
  		<item>cz</item>
  		<item>sl</item>
  		<item>dk</item>
  		<item>su</item>
  		<item>fr</item>
  		<item>gr</item>
  		<item>hu</item>
  		<item>it</item>
  		<item>la</item>
  		<item>nl</item>
  		<item>no</item>
  		<item>pl</item>
  		<item>po</item>
  		<item>sp</item>
  		<item>sv</item>
  		<item>sf</item>
  		<item>sg</item>
  		<item>uk</item>
  		<item>us</item>
  		<item>yu</item>	    
  	</string-array>
    <string-array name="confscalemode">
  		<item>Fast Scale</item>
  		<item>HQ Scale (slower)</item>
  	</string-array>
</resources>