<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_keyboard"
          android:title="@string/menu_keyboard"
          android:icon="@drawable/ic_action_keyboard"
          android:showAsAction="always" />
    <item android:id="@+id/menu_joystick"
          android:title="@string/menu_joystick"
          android:icon="@drawable/ic_action_joystick"
          android:showAsAction="always" />
    <item android:id="@+id/menu_inputmethod"
          android:title="@string/menu_inputmethod"
          android:icon="@drawable/ic_action_inputmethod"
          android:showAsAction="never" />
    <item android:id="@+id/menu_specialkeys"
          android:title="@string/menu_specialkeys"
          android:icon="@drawable/ic_action_flash"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_scale"
          android:title="Scale: Off"
          android:icon="@drawable/ic_action_resize"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_settings"
          android:title="@string/menu_settings"
          android:icon="@drawable/ic_action_settings"
          android:showAsAction="always" />
    <item android:id="@+id/menu_exit"
          android:title="@string/menu_exit"
          android:icon="@drawable/ic_action_exit"
          android:showAsAction="never" />
</menu>