<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/controlmap_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_analog_stick" 
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/controlvalue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undefined"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

    </LinearLayout>    
</LinearLayout>
</ScrollView>