<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/controlmap_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_controller_key" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btnA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Btn A" />
        <Button
            android:id="@+id/btnB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Btn B" />
        <Button
            android:id="@+id/btnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Btn C" />
        <Button
            android:id="@+id/btnD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Btn D" />
    </LinearLayout>
    <TextView
        android:id="@+id/controlvalue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undefined"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
   <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:text="" />
    
    <TextView
        android:id="@+id/dosmap_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="" />

    <Spinner
        android:id="@+id/spinmap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

        <Button
            android:id="@+id/kbd_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyboard" />

    </LinearLayout>    
</LinearLayout>
</ScrollView>